--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 
 <body>
     <header>
-
         <nav>
             <div class="logo">
-                <h4>Rizqi Proyek 1</h4>
+                <img src="img/logo.jpg" alt="Logo">
+                <!-- <h4>Farida Aryani</h4> -->
             </div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Subjects</a></li>
-                <li><a href="#">Files</a></li>
-                <li><a href="#">Assignment</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Profil.html">Profil</a></li>
+                <li><a href="galery.html">Gallery</a></li>
+                <li><a href="Home.html">About</a></li>
             </ul>
             <div class="menu-toggle">
                 <input type="checkbox">
@@ -32,21 +31,22 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-    <main>
-        <div class="box flextwo">
-            <article>
-                <h2>Tentang Web</h2>
-                <p>Web Ini dibuat untuk memenuhi tugas Proyek 1. Beberapa sumber yang dipakai dalam pengerjaan tugas ini selain dari lms  adalah dari ... Terima Kasih</p>
-            </article>
+    <body>
+        <div class="container">
+            <div class="titletext">
+                <h1>Selamat Datang</h1>
+                <h4>Website ini diperuntukkan untuk memenuhi tugas Proyek 1 pada minggu ke-4</h4>
+                <h4>Pada mata kuliah hari ini, saya belajar banyak hal. Dimulai dari bagaimana harus menyikapi suatu masalah, bagaimana tetap tenang di situasi apapun (Karena jika tenang maka tugas akan mudah untuk dipahami), dan kolaborasi antar teman.Saya tahu kita semua terutama warga JTK adalah orang-orang yang hebat yang selalu melihat laptop, tidak jarang pula banyak orang IT lebih memilih untuk menghabiskan liburannya dengan proyek-proyek atau tugas-tugas yang berkaitan dengan laptop. Sampai-sampai ada yang menganggap laptop adalah pacarnya saking seringnya dibawa kemana - mana. Saya menyiapkan sedikit cuci mata dari layar coding anda untuk melihat keindahan alam yang sungguh luar biasa. Berikut adalah pesona dari destinasi wisata alam di green canyon lebih tepatnya di Pangandaran, Jawa Barat.</h4>
+                <div class="container slide-in">
+                    <video src="img/Pangandaran.mp4" controls>
+                        video not supported
+                    </video>
+                </div>
+            </div>
         </div>
-        <aside class="box flexone">
-            <img src="img/RIZQI.png" class="image"/>
-            <h5>Muhammad Rizqi Sholahuddin</h5>
-        </aside>
-    </main>
-    <footer class="box">
-        Rizqi, Di depan Laptop 27 Februari 2024
+    </body>
+    <footer>
+        &copy; 2024 Farida Aryani
     </footer>
     </div>
 </div>
