--- a/Home.html
+++ b/Home.html
@@ -28,17 +28,20 @@
             </div>
         </nav>
 
-    <iframe
-        width="1600"
-        height="1200"
-        frameborder="0" style="border:0"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d...!2d106.8456!3d-6.2088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f7fcbf1d5113%3A0xa5e0d92a79bf04ae!2sYour%20Location!5e0!3m2!1sen!2sid!4v1646065145504!5m2!1sen!2sid"
-        allowfullscreen="" loading="lazy">
-    </iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.0306034431774!2d107.54106947442106!3d-7.005679268617842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68effafe4ba7d9%3A0x26cc8c4cef33cbaa!2sCibangbara%20Residence!5e0!3m2!1sid!2sid!4v1709858721243!5m2!1sid!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
         <h2>Contact Me</h2>
         <p>Anda dapat menghubungi saya melalui alamat email:</p>
         <p>Email: <a href="mailto:your.email@example.com">arynifar85@gmail.com</a></p>
+        <!--social-->
+        <div class+"social-icons">
+            <a href="#">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#">
+                <a href="#"></a>
+            </a>
+        </div>
 
     <footer>
         &copy; 2024 Farida Aryani
