--- a/Profil.html
+++ b/Profil.html
@@ -46,6 +46,9 @@
                     <p>Banyak lesson learn yang saya dapatkan terutama dalam proyek ini. Saya adalah tipe orang yang kurang teliti dan acuh terhadap sesuatu. Tapi saya mulai memperhatikan hal-hal kecil dari proyek ini.</p>
                     <p>Harapan setelah lulus saya harap dapat menerapkan dan mengembangkan ilmu yang telah didapat. Saya juga ingin menjadi seorang pegawai tetap di suatu perusahaan akan tetapi saya memiliki side job yang lain.</p>
                 </article>
+                <div class="container slide-in">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4MrD_bK8qmM?si=Wf6Iy5VfP2KPj-uO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
             <div class="box flextwo">
                 <div class="container slide-in">
