--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyek1 STr HTML 27 02 2024</title>
+    <title>Farida Aryani</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Srisakdi&display=swap" rel="stylesheet">
 
@@ -14,8 +14,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="img/logo.jpg" alt="Logo">
-                <!-- <h4>Farida Aryani</h4> -->
+                <h4>Farida Aryani</h4>
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -37,11 +36,6 @@
                 <h1>Selamat Datang</h1>
                 <h4>Website ini diperuntukkan untuk memenuhi tugas Proyek 1 pada minggu ke-4</h4>
                 <h4>Pada mata kuliah hari ini, saya belajar banyak hal. Dimulai dari bagaimana harus menyikapi suatu masalah, bagaimana tetap tenang di situasi apapun (Karena jika tenang maka tugas akan mudah untuk dipahami), dan kolaborasi antar teman.Saya tahu kita semua terutama warga JTK adalah orang-orang yang hebat yang selalu melihat laptop, tidak jarang pula banyak orang IT lebih memilih untuk menghabiskan liburannya dengan proyek-proyek atau tugas-tugas yang berkaitan dengan laptop. Sampai-sampai ada yang menganggap laptop adalah pacarnya saking seringnya dibawa kemana - mana. Saya menyiapkan sedikit cuci mata dari layar coding anda untuk melihat keindahan alam yang sungguh luar biasa. Berikut adalah pesona dari destinasi wisata alam di green canyon lebih tepatnya di Pangandaran, Jawa Barat.</h4>
-                <div class="container slide-in">
-                    <video src="img/Pangandaran.mp4" controls>
-                        video not supported
-                    </video>
-                </div>
             </div>
         </div>
     </body>
