--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farida Aryani</title>
+    <title>Farida first web</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Srisakdi&display=swap" rel="stylesheet">
 
@@ -35,7 +35,8 @@
             <div class="titletext">
                 <h1>Selamat Datang</h1>
                 <h4>Website ini diperuntukkan untuk memenuhi tugas Proyek 1 pada minggu ke-4</h4>
-                <h4>Pada mata kuliah hari ini, saya belajar banyak hal. Dimulai dari bagaimana harus menyikapi suatu masalah, bagaimana tetap tenang di situasi apapun (Karena jika tenang maka tugas akan mudah untuk dipahami), dan kolaborasi antar teman.Saya tahu kita semua terutama warga JTK adalah orang-orang yang hebat yang selalu melihat laptop, tidak jarang pula banyak orang IT lebih memilih untuk menghabiskan liburannya dengan proyek-proyek atau tugas-tugas yang berkaitan dengan laptop. Sampai-sampai ada yang menganggap laptop adalah pacarnya saking seringnya dibawa kemana - mana. Saya menyiapkan sedikit cuci mata dari layar coding anda untuk melihat keindahan alam yang sungguh luar biasa. Berikut adalah pesona dari destinasi wisata alam di green canyon lebih tepatnya di Pangandaran, Jawa Barat.</h4>
+                <h4>Lesson learn</h4>
+                <h4>Saya belajar banyak mengenai hal-hal yang baru. Seperti sekarang membuat web, saya pertama kali membuat website. Banyak hal yang tidak saya ketahui, bahkan saya seperti buta desain karena belum pernah belajar sebelumnya. Ini membuat saya berpikir ternyata saya tidak tahu apa-apa mengenai Jurusan yang sedang saya tekuni. Ini membuat saya menambah list apa saja yang harus saya pelajari kembali</h4>
             </div>
         </div>
     </body>
