--- a/Home.html
+++ b/Home.html
@@ -11,28 +11,31 @@
 
 <body>
         <nav>
-            <div class="logo">
-                <h4>Farida Aryani</h4>
-            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Profil.html">Profil</a></li>
                 <li><a href="galery.html">Gallery</a></li>
+                <li><a href="index.html">Farida Aryani</a></li>
+                <li><a href="Profil.html">Scrapping</a></li>
                 <li><a href="Home.html">About</a></li>
             </ul>
             <div class="menu-toggle">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>   
             </div>
         </nav>
-
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.0306034431774!2d107.54106947442106!3d-7.005679268617842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68effafe4ba7d9%3A0x26cc8c4cef33cbaa!2sCibangbara%20Residence!5e0!3m2!1sid!2sid!4v1709858721243!5m2!1sid!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
         <h2>Contact Me</h2>
-        <p>Anda dapat menghubungi saya melalui alamat email:</p>
-        <p>Email: <a href="mailto:your.email@example.com">arynifar85@gmail.com</a></p>
+        <div contact>
+            <h3>Alamat </h3>
+            <div left>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.0306034431774!2d107.54106947442106!3d-7.005679268617842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68effafe4ba7d9%3A0x26cc8c4cef33cbaa!2sCibangbara%20Residence!5e0!3m2!1sid!2sid!4v1709858721243!5m2!1sid!2sid" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div right>
+                <p>Anda dapat menghubungi saya melalui alamat email:</p>
+                <p>Email: <a href="mailto:your.email@example.com">farida.aryani.tif423@Polban.ac.id</a></p>
+            </div>
+        </div>
         <!--social-->
         <div class+"social-icons">
             <a href="#">
