--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farida first web</title>
+    <title>Farida's Website statis</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Srisakdi&display=swap" rel="stylesheet">
 
@@ -13,17 +13,14 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <h4>Farida Aryani</h4>
-            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Profil.html">Profil</a></li>
                 <li><a href="galery.html">Gallery</a></li>
+                <li><a href="index.html">Farida Aryani</a></li>
+                <li><a href="Profil.html">Scrapping</a></li>
                 <li><a href="Home.html">About</a></li>
             </ul>
             <div class="menu-toggle">
-                <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>   
@@ -33,11 +30,50 @@
     <body>
         <div class="container">
             <div class="titletext">
-                <h1>Selamat Datang</h1>
-                <h4>Website ini diperuntukkan untuk memenuhi tugas Proyek 1 pada minggu ke-4</h4>
-                <h4>Lesson learn</h4>
-                <h4>Saya belajar banyak mengenai hal-hal yang baru. Seperti sekarang membuat web, saya pertama kali membuat website. Banyak hal yang tidak saya ketahui, bahkan saya seperti buta desain karena belum pernah belajar sebelumnya. Ini membuat saya berpikir ternyata saya tidak tahu apa-apa mengenai Jurusan yang sedang saya tekuni. Ini membuat saya menambah list apa saja yang harus saya pelajari kembali</h4>
+                <h1>Selamat Datang! </h1>
+                <h1>Saya Farida Aryani. </h1>
+                <h1>Mahasiswa Politeknik Negeri Bandung. </h1>
+                <h1>Jurusan Komputer dan Informatika. </h1>
+                <h3>Website ini diperuntukkan untuk memenuhi tugas Proyek 1: Pengembangan Perangkat Lunak Desktop pada minggu ke-4. Pada pembelajaran kali ini telah membantu saya menyadari pentingnya menjadi lebih teliti dalam pekerjaan saya. 
+                    Meskipun saya mungkin tidak terlalu memperhatikan detail sebelumnya, proyek ini membuat saya lebih sadar akan pentingnya memeriksa hal-hal kecil yang mungkin terlewatkan. Proyek ini juga mengajarkan saya pentingnya manajemen waktu yang baik. 
+                    Saya belajar bagaimana mengatur jadwal dan mengalokasikan waktu dengan efisien untuk menyelesaikan tugas-tugas yang diberikan.</h3>
             </div>
+        </div>
+        <div class="Bio">
+            <div class="left">
+                <aside>
+                    <img src="img/Farida.jpg" class="image" alt="Farida Aryani">
+                </aside>
+            </div>
+            <div class="right">
+                <article>
+                    <h3>Profil Saya </h3>
+                    <h4>Farida Aryani</h4>
+                    <h4>Bandung, 9 Juli 2005</h4>
+                    <h4>Kp. Bandawa RT 003 RW 015</h4>
+                    <h4>SMA Negeri 1 Soreang</h4>
+                </article>
+            </div>
+            <div class="end">
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4MrD_bK8qmM?si=Wf6Iy5VfP2KPj-uO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <h3>Quote </h3>
+            <br>
+            <blockquote>
+                <p>"Hidup yang tidak dipertaruhkan tidak akan di menangkan."<br>- Najwa Sihab</p>
+            </blockquote>
+        </div>
+        <div class="hobi">
+            <article>
+                <h4>Hobi saya adalah berolahraga terutama basket</h4>
+                <h4>Bahasa Pemrograman: Pyhton, C.</h4>
+                <h4>Banyak lesson learn yang saya dapatkan terutama dalam proyek ini. Saya adalah tipe orang yang kurang teliti dan acuh terhadap sesuatu. Tapi saya mulai memperhatikan hal-hal kecil dari proyek ini.</h4>
+                <h4>Harapan setelah lulus saya harap dapat menerapkan dan mengembangkan ilmu yang telah didapat. Saya juga ingin menjadi seorang pegawai tetap di suatu perusahaan akan tetapi saya memiliki side job yang lain.</h4>
+            </article>
         </div>
     </body>
     <footer>
