--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="galery.html">Gallery</a></li>
                 <li><a href="index.html">Farida Aryani</a></li>
-                <li><a href="Profil.html">Scrapping</a></li>
+                <li><a href="Profil.html">Data Scrapping I</a></li>
                 <li><a href="Home.html">About</a></li>
             </ul>
             <div class="menu-toggle">
