--- a/galery.html
+++ b/galery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farida first web</title>
+    <title>Farida's Website statis</title>
     <link rel="stylesheet" href="css/Galery.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Srisakdi&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="galery.html">Gallery</a></li>
             <li><a href="index.html">Farida Aryani</a></li>
-            <li><a href="Profil.html">Scrapping</a></li>
+            <li><a href="Profil.html">Data Scrapping I</a></li>
             <li><a href="Home.html">About</a></li>
         </ul>
         <div class="menu-toggle">
