--- a/Profil.html
+++ b/Profil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Pertama Farida</title>
+    <title>Farida's Website statis</title>
     <link rel="stylesheet" href="css/Profilis.css">
     <link rel="stylesheet" href="WebScrapping/scrap.htaccess">
     <link rel="stylesheet" href="js/XML.js">
