--- a/Profil.html
+++ b/Profil.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
     <div id="DataScrapping_json" class="headline_json">
-        <h1> Headline Republika Online</h1>
+        <h1> Tabel Data Scrapping </h1>
         <div id="table">
             <table>
                 <thead>
