--- a/my.html
+++ b/my.html
@@ -574,7 +574,7 @@
       } else if (percentage < 100) {
         progressText.textContent = "More than halfway there!";
       } else {
-        progressText.textContent = "Perfect! You completed all
+        progressText.textContent = "Perfect! You completed all tasks!";
       }
     }
 
