--- a/my.html
+++ b/my.html
@@ -1,13 +1,208 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <!-- Previous head content remains the same -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Glow-Up Journey | 30-Day Tracker</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#FF6B6B',
+            secondary: '#4ECDC4',
+            accent: '#FFE66D',
+            dark: '#292F36',
+            light: '#F7FFF7',
+          },
+          fontFamily: {
+            sans: ['Poppins', 'sans-serif'],
+          },
+        }
+      }
+    }
+  </script>
+  <style>
+    .gradient-bg {
+      background: linear-gradient(135deg, #FF6B6B 0%, #4ECDC4 100%);
+    }
+    .task-card {
+      transition: all 0.3s ease;
+    }
+    .task-card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+    }
+    .progress-ring__circle {
+      transition: stroke-dashoffset 0.5s ease;
+      transform: rotate(-90deg);
+      transform-origin: 50% 50%;
+    }
+    @media (max-width: 640px) {
+      .task-link-input {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .task-link-input input {
+        width: 100%;
+        margin-bottom: 8px;
+      }
+    }
+  </style>
 </head>
 <body class="bg-light font-sans text-dark">
-  <!-- Previous HTML content remains the same until the tasksByDay object -->
+  <div class="min-h-screen pb-10">
+    <!-- Header -->
+    <header class="gradient-bg text-white py-4 sm:py-6 shadow-lg">
+      <div class="container mx-auto px-4 text-center">
+        <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-1 sm:mb-2">My Glow-Up Journey</h1>
+        <p class="text-sm sm:text-base md:text-xl opacity-90">30 Days to a Better Me</p>
+      </div>
+    </header>
+
+    <div class="container mx-auto px-3 sm:px-4 py-6 sm:py-8 max-w-4xl">
+      <!-- Start Date Selector -->
+      <div class="bg-white rounded-xl shadow-md p-4 sm:p-6 mb-4 sm:mb-6">
+        <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center">Set Your Start Date</h2>
+        <div class="flex flex-col sm:flex-row items-center justify-center gap-3 sm:gap-4">
+          <input type="date" id="start-date" class="w-full sm:w-auto p-2 sm:p-3 rounded-lg border-2 border-secondary focus:border-primary focus:ring-2 focus:ring-primary text-base sm:text-lg font-medium">
+          <button onclick="setStartDate()" class="w-full sm:w-auto px-4 sm:px-6 py-2 sm:py-3 bg-primary text-white rounded-lg hover:bg-opacity-90 transition font-medium">Set Date</button>
+        </div>
+        <div id="date-range-display" class="mt-3 sm:mt-4 text-center text-sm sm:text-base md:text-lg font-medium hidden">
+          Your journey: <span id="start-date-display"></span> to <span id="end-date-display"></span>
+        </div>
+      </div>
+
+      <!-- Day Selector -->
+      <div class="bg-white rounded-xl shadow-md p-4 sm:p-6 mb-6 sm:mb-8">
+        <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center">Select Your Day</h2>
+        <div class="relative">
+          <select id="day" class="w-full p-3 sm:p-4 pr-10 rounded-lg border-2 border-secondary focus:border-primary focus:ring-2 focus:ring-primary appearance-none text-base sm:text-lg font-medium" onchange="updateTasks()">
+            <option value="1">Day 1 - Let's Begin!</option>
+            <option value="2">Day 2 - Building Momentum</option>
+            <option value="3">Day 3 - Finding Rhythm</option>
+            <option value="4">Day 4 - Consistency is Key</option>
+            <option value="5">Day 5 - Pushing Forward</option>
+            <option value="6">Day 6 - Almost There</option>
+            <option value="7">Day 7 - Rest & Reflect</option>
+            <option value="8">Day 8 - Level Up!</option>
+            <option value="9">Day 9 - Stronger Every Day</option>
+            <option value="10">Day 10 - Double Digits!</option>
+            <option value="11">Day 11 - Making Progress</option>
+            <option value="12">Day 12 - Halfway Mark</option>
+            <option value="13">Day 13 - Keep Going</option>
+            <option value="14">Day 14 - Rest Day</option>
+            <option value="15">Day 15 - New Challenges</option>
+            <option value="16">Day 16 - Building Habits</option>
+            <option value="17">Day 17 - Seeing Results</option>
+            <option value="18">Day 18 - Staying Motivated</option>
+            <option value="19">Day 19 - Almost There</option>
+            <option value="20">Day 20 - Two-Thirds Done!</option>
+            <option value="21">Day 21 - Rest & Recharge</option>
+            <option value="22">Day 22 - Final Push</option>
+            <option value="23">Day 23 - Breaking Limits</option>
+            <option value="24">Day 24 - So Close!</option>
+            <option value="25">Day 25 - Almost There</option>
+            <option value="26">Day 26 - Final Stretch</option>
+            <option value="27">Day 27 - Last Efforts</option>
+            <option value="28">Day 28 - Rest Day</option>
+            <option value="29">Day 29 - Preparing for Success</option>
+            <option value="30">Day 30 - Final Day!</option>
+          </select>
+          <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+            <svg class="fill-current h-4 w-4 sm:h-6 sm:w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>
+        </div>
+        <div id="current-date-display" class="mt-1 sm:mt-2 text-center text-xs sm:text-sm text-gray-600 font-medium"></div>
+      </div>
+
+      <!-- Progress Overview -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 sm:gap-6 mb-6 sm:mb-8">
+        <!-- Overall Progress -->
+        <div class="bg-white rounded-xl shadow-md p-4 sm:p-6">
+          <div class="flex items-center justify-between mb-3 sm:mb-4">
+            <h2 class="text-lg sm:text-xl font-semibold">Overall Progress</h2>
+            <div class="relative w-12 h-12 sm:w-16 sm:h-16">
+              <svg class="w-full h-full" viewBox="0 0 36 36">
+                <path d="M18 2.0845
+                  a 15.9155 15.9155 0 0 1 0 31.831
+                  a 15.9155 15.9155 0 0 1 0 -31.831"
+                  fill="none"
+                  stroke="#E0E0E0"
+                  stroke-width="3"/>
+                <path id="overall-progress-ring" d="M18 2.0845
+                  a 15.9155 15.9155 0 0 1 0 31.831
+                  a 15.9155 15.9155 0 0 1 0 -31.831"
+                  fill="none"
+                  stroke="#4ECDC4"
+                  stroke-width="3"
+                  stroke-dasharray="100, 100"/>
+                <text x="18" y="20.5" text-anchor="middle" font-size="6 sm:8" fill="#292F36" font-weight="bold">0%</text>
+              </svg>
+            </div>
+          </div>
+          <p id="progress" class="text-sm sm:text-base md:text-lg">Completed: <span class="font-bold">0</span> of <span class="font-bold">0</span> tasks</p>
+          <div class="mt-3 sm:mt-4">
+            <div class="flex justify-between mb-1">
+              <span class="text-xs sm:text-sm font-medium">Weight Loss</span>
+              <span id="weight-progress" class="text-xs sm:text-sm font-medium">0/30 days</span>
+            </div>
+            <div class="w-full bg-gray-200 rounded-full h-2 sm:h-2.5">
+              <div id="weight-bar" class="bg-primary h-2 sm:h-2.5 rounded-full" style="width: 0%"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Daily Progress -->
+        <div class="bg-white rounded-xl shadow-md p-4 sm:p-6">
+          <h2 class="text-lg sm:text-xl font-semibold mb-3 sm:mb-4">Day <span id="current-day">1</span> Progress</h2>
+          <div class="flex items-center justify-center mb-3 sm:mb-4">
+            <div class="relative w-24 h-24 sm:w-32 sm:h-32">
+              <svg class="w-full h-full" viewBox="0 0 36 36">
+                <path d="M18 2.0845
+                  a 15.9155 15.9155 0 0 1 0 31.831
+                  a 15.9155 15.9155 0 0 1 0 -31.831"
+                  fill="none"
+                  stroke="#E0E0E0"
+                  stroke-width="3"/>
+                <path id="daily-progress-ring" d="M18 2.0845
+                  a 15.9155 15.9155 0 0 1 0 31.831
+                  a 15.9155 15.9155 0 0 1 0 -31.831"
+                  fill="none"
+                  stroke="#FF6B6B"
+                  stroke-width="3"
+                  stroke-dasharray="0, 100"/>
+                <text x="18" y="20.5" text-anchor="middle" font-size="8 sm:10" fill="#292F36" font-weight="bold">0%</text>
+              </svg>
+            </div>
+          </div>
+          <p id="progress-text" class="text-center text-sm sm:text-base md:text-lg">You're just getting started!</p>
+        </div>
+      </div>
+
+      <!-- Tasks -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
+        <div class="gradient-bg px-4 py-3 sm:px-6 sm:py-4">
+          <h2 class="text-xl sm:text-2xl font-bold text-white">Day <span id="current-day-text">1</span> Tasks - <span id="current-date-task"></span></h2>
+        </div>
+        <div class="p-4 sm:p-6">
+          <ul id="tasks" class="space-y-3 sm:space-y-4">
+            <!-- Tasks will be loaded by JavaScript -->
+          </ul>
+        </div>
+      </div>
+
+      <!-- Motivational Quote -->
+      <div id="motivation" class="mt-6 sm:mt-8 text-center italic text-sm sm:text-base md:text-lg text-gray-600">
+        "The secret of getting ahead is getting started." - Mark Twain
+      </div>
+    </div>
+  </div>
 
   <script>
-    // Updated tasksByDay with enhanced IT career development focus
+    // Initialize tasksByDay, loading from localStorage if available
     let tasksByDay = JSON.parse(localStorage.getItem('tasksByDay')) || {
       1: [
         { category: "Fitness", task: "Morning yoga (30 min) + 10K steps", emoji: "🧘‍♀️", completed: false, link: "" },
@@ -404,6 +599,8 @@
       updateDailyProgressBar(day);
     }
 
+    
+    // Update getCategoryBorder function to include new categories
     function getCategoryBorder(category) {
       switch(category) {
         case 'Fitness': return 'border-primary';
