--- a/my.html
+++ b/my.html
@@ -146,7 +146,7 @@
           <p id="progress" class="text-sm sm:text-base md:text-lg">Completed: <span class="font-bold">0</span> of <span class="font-bold">0</span> tasks</p>
           <div class="mt-3 sm:mt-4">
             <div class="flex justify-between mb-1">
-              <span class="text-xs sm:text-sm font-medium">Weight Loss</span>
+              <span class="text-xs sm:text-sm font-medium">Skill Mastery</span>
               <span id="weight-progress" class="text-xs sm:text-sm font-medium">0/30 days</span>
             </div>
             <div class="w-full bg-gray-200 rounded-full h-2 sm:h-2.5">
@@ -697,6 +697,32 @@
       } else {
         progressText.textContent = "Perfect! You completed all tasks!";
       }
+    }
+
+    function isValidUrl(string) {
+      try {
+        new URL(string);
+        return true;
+      } catch (_) {
+        return false;
+      }
+    }
+
+    function toggleTask(day, index, checkbox) {
+      const task = tasksByDay[day][index];
+      if (checkbox.checked) {
+        if (!task.link) {
+          alert('Please add a progress link before marking as complete!');
+          checkbox.checked = false;
+          return;
+        }
+        if (!isValidUrl(task.link)) {
+          alert('Please enter a valid URL!');
+          checkbox.checked = false;
+          return;
+        }
+      }
+      // ... rest of the function
     }
 
     // Set today's date as default in date picker
