--- a/my.html
+++ b/my.html
@@ -54,7 +54,6 @@
     }
   </style>
 </head>
-
 <body class="bg-light font-sans text-dark">
   <div class="min-h-screen pb-10">
     <!-- Header -->
@@ -65,6 +64,7 @@
       </div>
     </header>
 
+    <!-- Main Content -->
     <div class="container mx-auto px-3 sm:px-4 py-6 sm:py-8 max-w-4xl">
       <!-- Start Date Selector -->
       <div class="bg-white rounded-xl shadow-md p-4 sm:p-6 mb-4 sm:mb-6">
